refactor: adapt code to new Hobby entity